Wed Apr  6 02:38:19 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* autogen.sh src/tds/Makefile.am src/tds/encodings.pl
	- allowed for out-of-tree building.  Do not assume .c and .o 
	- are in the same directory.  Put built .h files in $(srcdir). 
	* doc/userguide.sgml edited debug flags for idiom, plus explanations.  
	
Tue Apr  5 19:02:49 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* samples/odbc_rpc.pl fixed silly getopt misprocessing
	
Tue Apr  5 18:47:05 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* samples/odbc_rpc.pl added datatyping feature

Tue Apr  5 18:08:50 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* samples/odbc_rpc.pl new example of RPC use
	
Tue Apr  5 11:44:48 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/userguide.sgml doc/htdoc/faq.html 
	- updated, moved CVS instructions

Tue Apr  5 16:53:02 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/tds/encodings.h(removed):
	* src/tds/sybase_character_sets.h(removed):
	* src/tds/sybase_character_sets.h.pl(removed):
	* src/tds/tds_willconvert.h(removed):
	* src/tds/tds_willconvert.pl(added):
	* src/tds/convert.c src/tds/Makefile.am src/tds/encodings.pl:
	- normalize perl generated file
	 - moved embedded perl from convert.c to tds_willconvert.c
	 - move sybase_character_sets.pl code in encodings.pl
	 - removed autogenerated files

Tue Apr  5 13:41:55 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/tds/Makefile.am src/tds/numeric.pl(removed):
	* src/tds/num_limits.pl(added):
	- moved src/tds/numeric.pl to src/tds/num_limits.pl

Tue Apr  5 11:15:12 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO: updates
	* freetds.spec.in:
	- improved dependency for RedHat and SUSE
	- install drivers in unixODBC

Tue Apr  5 10:36:58 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: committed new debug flag option

Mon Apr  4 18:02:53 EDT 2005	JK Lowden <jklowden@schemamania.org>